# tenx-missile

./: .devcontainer.json  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
tenx_missile/: __init__.py  control.py
tests/: test_fire.py  test_z_direct_control.py
