[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tenx_missile"
version = "0.0.1"
description = "Python driver to control the Tenx USB Missile Launcher"
license = "MIT"
authors = [
  "Àngel Fernández <angelfernandezibanez@gmail.com>",
  "Chris Cunningham <thumperward@hotmail.com>"
  ]
homepage="https://github.com/anxodio/tenx-missile"
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6"
]

[tool.poetry.scripts]
missile = "tenx_missile.control:fire"

[tool.poetry.dependencies]
python = "^3.9"
pyusb = "^1.2.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
